# ShareSphere

./: .gitignore  CMakeLists.txt  DataStore.h  FileManager.cpp  FileManager.h  Item.cpp  Item.h  LICENSE  README.md  Request.cpp  Request.h  ShareSphereException.h  Student.cpp  Student.h  SystemManager.cpp  SystemManager.h  User.cpp  User.h  Validator.cpp  Validator.h  items.txt  main.cpp  main_qt.cpp  runqt.bat  test_item.cpp  test_user.cpp  users.txt
.github/workflows/: c-cpp.yml
